--- a/ar.html
+++ b/ar.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 <div id="container"></div>
-<script type="text/javascript" src="../../js/awe-v8.js"></script>
-<script type="text/javascript" src="../../js/awe-loader.js"></script>
+<script type="text/javascript" src="/js/awe-v8.js"></script>
+<script type="text/javascript" src="/js/awe-loader.js"></script>
 <script type="text/javascript">
   window.addEventListener('load', function() {
     // initialize awe after page loads
