--- a/ar.html
+++ b/ar.html
@@ -12,6 +12,8 @@
 
         #container {
             position: absolute;
+            width: 300px;
+            height: 300px;
             left: 0;
             top: 0;
             bottom: 0;
@@ -34,11 +36,40 @@
             console.log("Geolocation not supported");
         }
 
+        var x = 10;
+        var y = 10;
+
+        var x = 0;
+        var y = 0;
+
         function showPosition(position) {
-            console.log(position);
-            console.log(position.coords.latitude  + "  " + position.coords.longitude);
+
+
+            console.log("x " + position.coords.latitude * 10000);
+            console.log("y " + position.coords.longitude * 10000);
+
+            if (window.awe.povs) {
+
+                /*
+                 x = x + 10;
+                 window.awe.povs.update({
+                 data: {
+                 position: {
+                 x: parseInt(position.coords.latitude * 1000000),
+                 y: parseInt(position.coords.longitude * 1000000),
+                 z: 0
+                 }
+                 },
+                 where: {
+                 id: "default"
+                 }
+                 });
+                 */
+            }
+            //window.awe.scene_needs_rendering = 1;
         }
 
+        window.awe.debug = true;
         // initialize awe after page loads
         window.awe.init({
             // automatically detect the device type
@@ -47,7 +78,11 @@
             settings: {
                 container_id: 'container',
                 fps: 30,
-                default_camera_position: {x: 0, y: 0, z: 0},
+                default_camera_position: {
+                    x:420,
+                    y: 0,
+                    z: 0
+                },
                 default_lights: [
                     {
                         id: 'hemisphere_light',
@@ -80,11 +115,8 @@
                                 click_plugin.register();
                                 click_plugin.enable();
                             }
+
                             var gyro_plugin = awe.plugins.view('gyro');
-                            if (gyro_plugin) {
-                                gyro_plugin.enable();
-                            }
-                            var mouse_plugin = awe.plugins.view('gyro');
                             if (gyro_plugin) {
                                 gyro_plugin.enable();
                             }
@@ -95,106 +127,28 @@
                                 render_effects_plugin.enable();
                             }
 
-                            // setup some code to handle when an object is clicked/tapped
-                            window.addEventListener('object_clicked', function (e) {
-                                var p = awe.projections.view(e.detail.projection_id);
-                                awe.projections.update({ // rotate clicked object by 180 degrees around x and y axes over 10 seconds
-                                    data: {
-                                        animation: {
-                                            duration: 10,
-                                        },
-                                        rotation: {y: p.rotation.y + 180, x: p.rotation.x + 180}
-                                    },
-                                    where: {id: e.detail.projection_id}
-                                });
-                            }, false);
 
                             // add some points of interest (poi) for each of the compass points
-                            awe.pois.add({id: 'north', position: {x: 0, y: 0, z: 200}});
-                            awe.pois.add({id: 'north_east', position: {x: 200, y: 0, z: 200}});
-                            awe.pois.add({id: 'east', position: {x: 200, y: 0, z: 0}});
-                            awe.pois.add({id: 'south_east', position: {x: 200, y: 0, z: -200}});
-                            awe.pois.add({id: 'south', position: {x: 0, y: 0, z: -200}});
-                            awe.pois.add({id: 'south_west', position: {x: -200, y: 0, z: -200}});
-                            awe.pois.add({id: 'west', position: {x: -200, y: 0, z: 0}});
-                            awe.pois.add({id: 'north_west', position: {x: -200, y: 0, z: 200}});
+                            awe.pois.add({id: 'register-desk', position: {x:0, y: 0, z: -300}});
 
-                            // add projections to each of the pois
+
+                            // add projections to each of the poAis
                             awe.projections.add({
                                 id: 'n',
-                                geometry: {shape: 'cube', x: 50, y: 50, z: 50},
-                                rotation: {x: 30, y: 30, z: 0},
+                                geometry: {
+                                    font_url: "Supersonic_Rocketship_Regular.js",   /// REQUIRED - currently must be .js not .json
+                                    parameters: {
+                                        "height": "0", // depth of the extruded text
+                                        "size": "30"
+                                    },
+                                    shape: "text",
+                                    text: "A"
+                                },
                                 material: {
                                     type: 'phong',
                                     color: 0xFF0000,
                                 },
-                            }, {poi_id: 'north'});
-
-                            awe.projections.add({
-                                id: 'ne',
-                                geometry: {shape: 'sphere', radius: 10},
-                                material: {
-                                    type: 'phong',
-                                    color: 0xCCCCCC,
-                                },
-                            }, {poi_id: 'north_east'});
-
-                            awe.projections.add({
-                                id: 'e',
-                                geometry: {shape: 'cube', x: 50, y: 50, z: 50},
-                                rotation: {x: 30, y: 30, z: 0},
-                                material: {
-                                    type: 'phong',
-                                    color: 0x00FF00,
-                                },
-                            }, {poi_id: 'east'});
-
-                            awe.projections.add({
-                                id: 'se',
-                                geometry: {shape: 'sphere', radius: 10},
-                                material: {
-                                    type: 'phong',
-                                    color: 0xCCCCCC,
-                                },
-                            }, {poi_id: 'south_east'});
-
-                            awe.projections.add({
-                                id: 's',
-                                geometry: {shape: 'cube', x: 50, y: 50, z: 50},
-                                rotation: {x: 30, y: 30, z: 0},
-                                material: {
-                                    type: 'phong',
-                                    color: 0xFFFFFF,
-                                },
-                            }, {poi_id: 'south'});
-
-                            awe.projections.add({
-                                id: 'sw',
-                                geometry: {shape: 'sphere', radius: 10},
-                                material: {
-                                    type: 'phong',
-                                    color: 0xCCCCCC,
-                                },
-                            }, {poi_id: 'south_west'});
-
-                            awe.projections.add({
-                                id: 'w',
-                                geometry: {shape: 'cube', x: 50, y: 50, z: 50},
-                                rotation: {x: 30, y: 30, z: 0},
-                                material: {
-                                    type: 'phong',
-                                    color: 0x0000FF,
-                                },
-                            }, {poi_id: 'west'});
-
-                            awe.projections.add({
-                                id: 'nw',
-                                geometry: {shape: 'sphere', radius: 10},
-                                material: {
-                                    type: 'phong',
-                                    color: 0xCCCCCC,
-                                },
-                            }, {poi_id: 'north_west'});
+                            }, {poi_id: 'register-desk'});
 
                         },
                     },
